force-app/main/default/objects/CampaignMember/fields/AM_CM__c.field-meta.xml
<CustomField>
    <fullName>AM_CM__c</fullName>
    <formula>IF(ISBLANK(ContactId), Lead.AM__c, Contact.AM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM(CM)</label>
    <type>Text</type>
</CustomField>