force-app/main/default/objects/CampaignMember/fields/State_CM__c.field-meta.xml
<CustomField>
    <fullName>State_CM__c</fullName>
    <formula>IF(ISBLANK(ContactId), Lead.State__c, Contact.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State(CM)</label>
    <type>Text</type>
</CustomField>